# aed3-2019-1c-tp3

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  GraphicalBoard.py  Referee.py  jugador_greedy  jugador_test
src/trabajo/: Player.cpp
src/trabajo/entities/: Tablero.cpp  Tablero.h
src/trabajo/src/: ConsoleGame.cpp  ConsoleGame.h  Game.cpp  Game.h  InplaceGame.cpp  InplaceGame.h  Player.cpp  Player.h
src/trabajo/src/entities/: Defines.h  Individuo.cpp  Individuo.h  ResultadosPartida.h  Solucion.cpp  Solucion.h  Tablero.cpp  Tablero.h
src/trabajo/src/executables/: GridSearch_Main.cpp  genetic_parametriced_player.cpp  greedy_player_main.cpp  jugador-random-contra-genetico.cpp  optimizaciones_genetico_jugador_greedy_main.cpp  params_player_main.cpp  random_player_main.cpp  test_inplace_game.cpp
src/trabajo/src/parameter_optimizations/: AlgoritmoGenetico.cpp  AlgoritmoGenetico.h  GridSearch.cpp  GridSearch.h  grid_search_main.cpp
src/trabajo/src/parte-dos/: main.cpp  manager.hpp  player.h  random_player.cpp  statehelper.cpp  statehelper.h
src/trabajo/src/parte-dos/strategies/: greedy_player.cpp  line_seeker_player.cpp  naive_player.cpp  random_player.cpp
src/trabajo/src/players/: GreedyPlayer.cpp  GreedyPlayer.h  ParamsStrategy.cpp  ParamsStrategy.h  RandomPlayer.cpp  RandomPlayer.h  greedy_player_main.cpp  iPlayer.h  params_player_main.cpp  test_player_main.cpp
src/trabajo/src/players/parametriced_strategies/: Diagonal315Defensivo.h  Diagonal315Ofensivo.h  Diagonal315Strategy.h  Diagonal45Defensivo.h  Diagonal45Ofensivo.h  Diagonal45Strategy.h  HorizontalDefensivo.h  HorizontalOfensivo.h  HorizontalStrategy.h  JugadaAleatoria.h  Strategy.h  VerticalDefensivo.h  VerticalOfensivo.h  VerticalStrategy.h
src/trabajo/src/players/parametriced_strategies/impl/: Diagonal315Defensivo.cpp  Diagonal315Ofensivo.cpp  Diagonal315Strategy.cpp  Diagonal45Defensivo.cpp  Diagonal45Ofensivo.cpp  Diagonal45Strategy.cpp  HorizontalDefensivo.cpp  HorizontalOfensivo.cpp  HorizontalStrategy.cpp  JugadaAleatoria.cpp  Strategy.cpp  VerticalDefensivo.cpp  VerticalOfensivo.cpp  VerticalStrategy.cpp
src/trabajo/src/strategies/: AlgoritmoGenetico.cpp  AlgoritmoGenetico.h  Diagonal45Ofensivo.cpp  Diagonal45Ofensivo.h  GreedyStrategy.cpp  GreedyStrategy.h  ParamsStrategy.cpp  ParamsStrategy.h  PlayStrategy.h  TestStrategy.h
src/trabajo/src/strategies/parametriced_strategies/: Diagonal315Defensivo.h  Diagonal315Ofensivo.h  Diagonal315Strategy.h  Diagonal45Defensivo.h  Diagonal45Ofensivo.h  Diagonal45Strategy.h  HorizontalDefensivo.h  HorizontalOfensivo.h  HorizontalStrategy.h  JugadaAleatoria.h  MejorHorizontal.h  MejorHorizontalDefensivo.h  MejorHorizontalOfensivo.cpp  MejorHorizontalOfensivo.h  MejorVertical.h  MejorVerticalDefensivo.h  MejorVerticalOfensivo.cpp  MejorVerticalOfensivo.h  Strategy.h  VerticalDefensivo.h  VerticalOfensivo.h  VerticalStrategy.h
src/trabajo/src/strategies/parametriced_strategies/impl/: Diagonal315Defensivo.cpp  Diagonal315Ofensivo.cpp  Diagonal315Strategy.cpp  Diagonal45Defensivo.cpp  Diagonal45Ofensivo.cpp  Diagonal45Strategy.cpp  HorizontalDefensivo.cpp  HorizontalOfensivo.cpp  HorizontalStrategy.cpp  JugadaAleatoria.cpp  MejorHorizontal.cpp  MejorHorizontalDefensivo.cpp  MejorHorizontalOfensivo.cpp  MejorVertical.cpp  MejorVerticalDefensivo.cpp  MejorVerticalOfensivo.cpp  Strategy.cpp  VerticalDefensivo.cpp  VerticalOfensivo.cpp  VerticalStrategy.cpp
src/trabajo/strategies/: GreedyStrategy.cpp  GreedyStrategy.h  PlayStrategy.h  TestStrategy.cpp  TestStrategy.h
src/trabajo/strategies/parametriced_strategies/: Strategy.cpp
src/trabajo/test/: InplaceGameTest.cpp  PlayerTest.cpp  test_main.cpp
src/trabajo/test/players/: PlayerTest.cpp
src/trabajo/test/players/parametriced_strategies/: Diagonal315StrategyTest.cpp  Diagonal45StrategyTest.cpp  HorizontalStrategyTest.cpp  VerticalStrategyTest.cpp
